@@ -13,7 +13,7 @@
 #               2012 Martin Fleurke, Wildrich Fourie, Didier Briel, Guido Leenders, Jean-Christophe Helary, 
 #                    Alex Buloichik
 #               2013 Aaron Madlon-Kay, Zoltan Bartko, Didier Briel
-#               2014 Aaron Madlon-Kay
+#               2014 Aaron Madlon-Kay, Didier Briel
 #               Home page: http://www.omegat.org/
 #               Support center: http://groups.yahoo.com/group/OmegaT/
 #
@@ -1130,6 +1130,9 @@ OpenDoc_ERROR_IN_FILE=Error in file
 XLIFF_OPTIONS_TITLE=XLIFF Filter Options
 XLIFF_OPTIONS_LABEL=Specify tag handling behaviour 
 XLIFF_OPTIONS_26=&Compatibility with OmegaT 2.6
+XLIFF_OPTIONS_ID=Identifier used for alternative translations
+XLIFF_OPTIONS_ID_NEXT_PREV=Previous and &next paragraphs
+XLIFF_OPTIONS_ID_TRANS_UNIT=<trans-unit> I&D
 XLIFF_OPTIONS_36_ONLY=The following options apply to the 3.x filter only
 XLIFF_OPTIONS_FORCE2F=&Force shortcut to "f" for <it pos="end"> tags
 XLIFF_OPTIONS_IGNORE4PH=&Ignore type and ctype attributes when building <ph> tag shortcuts
