@@ -13,7 +13,7 @@
 #               2012 Martin Fleurke, Wildrich Fourie, Didier Briel, Guido Leenders, Jean-Christophe Helary, 
 #                    Alex Buloichik
 #               2013 Aaron Madlon-Kay, Zoltan Bartko, Didier Briel
-#               2014 Aaron Madlon-Kay
+#               2014 Aaron Madlon-Kay, Didier Briel
 #               Home page: http://www.omegat.org/
 #               Support center: http://groups.yahoo.com/group/OmegaT/
 #
@@ -1076,10 +1076,13 @@ OpenDoc_ERROR_IN_FILE=Erreur dans le fichier
 XLIFF_OPTIONS_TITLE=Options du filtre Fichiers XLIFF
 XLIFF_OPTIONS_LABEL=Sp\u00e9cifier la gestion des balises 
 XLIFF_OPTIONS_26=&Compabitilit\u00e9 avec OmegaT 2.6
+XLIFF_OPTIONS_ID=Identifiant utilis\u00e9 pour les traductions alternatives
+XLIFF_OPTIONS_ID_NEXT_PREV=Paragraphes sui&vants et pr\u00e9c\u00e9dents
+XLIFF_OPTIONS_ID_TRANS_UNIT=I&D <trans-unit>
 XLIFF_OPTIONS_36_ONLY=Les options suivantes ne s'appliquent qu'au filtre 3.x
 XLIFF_OPTIONS_FORCE2F=&Forcer le raccourci \u00e0 \u00ab\u00a0f\u00a0\u00bb pour les balises <it pos="end">
 XLIFF_OPTIONS_IGNORE4PH=&Ignorer les attributs type et ctype en construisant les raccourcis des balises <ph>
-XLIFF_OPTIONS_IGNORE4BPT=&Ignorer les attributs type et ctype en construisant les raccourcis des balises <ph>
+XLIFF_OPTIONS_IGNORE4BPT=Ignorer les attributs type et ctype en construisant les raccourcis des balises <&bpt> et <ept>
 
 # org.omegat.filters3.xml.openxml.OpenXMLFilter
 
