@@ -6,7 +6,7 @@
  Copyright (C) 2000-2006 Keith Godfrey and Maxym Mykhalchuk
                2007-2011 Didier Briel
                2013 Didier Briel, Aaron Madlon-Kay, Piotr Kulik
-               2014 Piotr Kulik
+               2014 Piotr Kulik, Didier Briel
                Home page: http://www.omegat.org/
                Support center: http://groups.yahoo.com/group/OmegaT/
 
@@ -60,6 +60,12 @@ public class XLIFFFilter extends XMLFilter {
     private String text;
     private ArrayList<String> entryText = new ArrayList<String>();
     private ArrayList<List<ProtectedPart>> protectedParts = new ArrayList<List<ProtectedPart>>();
+    
+    private String id;
+   /**
+     * Sets whether alternative translations are identified by previous and next paragraphs or by &lt;trans-unit&gt; ID
+    */
+     private boolean useTransUnitID;
 
     /**
      * Register plugin into OmegaT.
@@ -126,7 +132,11 @@ public class XLIFFFilter extends XMLFilter {
     
     @Override
     protected boolean requirePrevNextFields() {
-        return true;
+        if (useTransUnitID) {
+            return false;
+        } else {
+            return true;
+        }
     }
     
     /**
@@ -179,6 +189,7 @@ public class XLIFFFilter extends XMLFilter {
                 } catch (Exception e) {
                     Log.log(e);
                 }
+                this.useTransUnitID = dialect.useTransUnitID;
         }
         return result;
     }
@@ -190,6 +201,9 @@ public class XLIFFFilter extends XMLFilter {
     public void tagStart(String path, Attributes atts) {
         if (atts != null && path.endsWith("trans-unit")) {
             resname = atts.getValue("resname");
+            if (useTransUnitID) {
+                id = atts.getValue("id");
+            }
         }
         // not all <group> tags have resname attribute
         if (path.endsWith("/group")) {
@@ -232,7 +246,10 @@ public class XLIFFFilter extends XMLFilter {
                 String comment = buf.length() == 0 ? null : buf.substring(0, buf.length() - 1);
                 
                 for (int i = 0; i < entryText.size(); i++) {
-                    entryParseCallback.addEntry(null, entryText.get(i), null, false, comment, null, this, protectedParts.get(i));
+                    if (!useTransUnitID) {
+                        id = null;
+                    }
+                    entryParseCallback.addEntry(id, entryText.get(i), null, false, comment, null, this, protectedParts.get(i));
                 }
             }
 
